2009-07-03  Christopher Bratusek <zanghar@freenet.de>
	* configure.in: post-release version bump to 1.6.0 [branched 1.5.0],
	bump rep-gtk requirement to 0.90.0, therefore bumped gtk+ requirement
	to 2.12.0

	* lisp/sawfish/gtk/color-preview.jl: use GtkColorButton instead of
	GtkPreview (for rep-gtk 0.90.0)

2009-07-02  Christopher Bratusek <zanghar@freenet.de>
	* po/*
	* configure.in: de-intltoolize sawfish ... is breaking current
	sawfish-ui badly, preparative tasks for tommorows 1.5.0 release

2009-06-26  Christopher Bratusek <zanghar@freenet.de>
	* configure.in: added --with/without-nls option [disable installing
	translations files, default=enabled]

	* scripts/Makefile.in
	* lisp/Makefile.in
	* lisp/sawfish/ui/Makefile.in
	* lisp/sawfish/gtk/Makefile.in: expand REP_ENVIRON

	* lisp/sawfish/wm/session/init.jl: set RestartStyleHint to 2
	[Christian Marillat]

	* lisp/sawfish/wm/session/load.jl: when matching window to alist try
	to match according WM_NAME if there's no WM_CLASS [Christian Marillat]

	* README.IMPORTANT
	* man/news.texi: updated

2009-06-19  Christopher Bratusek <zanghar@freenet.de>
	* themes/microGUI/theme.jl: fixed a speed-issue

	* themes/Elberg-tabbed/theme.jl: make properly use of WM_NAME

	* lisp/sawfish/wm/ext/match-window.jl: expose fixed-position,
	never-iconify, never-maximize in the Window-Matcher UI

	* lisp/sawfish/wm/focus.jl
	* lisp/sawfish/wm/state/transient.jl: improve kde3 integration
	and new focus-revert logic [Timo Korvola]

	* README.IMPORTANT: Note about double-click in UI

	* man/sawfish.texi: updated doc for focus-revert [Timo Korvola]

	* man/news.texi: updated

2009-06-01  Christopher Bratusek <zanghar@freenet.de>
	* lisp/sawfish/gtk/widget.jl: UTF-8 Support

2009-05-31  Christopher Bratusek <zanghar@freenet.de>
	* lisp/sawfish/wm/goups.jl
	* lisp/sawfish/wm/ext/beos-window-menu.jl: UTF-8 Support [Wang Diancheng]

	* configure.in: bump minimum librep to 0.90.0 for UTF-8 Support
		        small fixup in rep-gtk check
