@@ -94,6 +94,15 @@
 (autoload-command (quote move-cursor-left-fine) (quote sawfish.wm.commands.move-cursor))
 (autoload-command (quote move-cursor-up-fine) (quote sawfish.wm.commands.move-cursor))
 (autoload-command (quote move-cursor-down-fine) (quote sawfish.wm.commands.move-cursor))
+(autoload-command (quote move-cursor-northwest) (quote sawfish.wm.commands.move-cursor))
+(autoload-command (quote move-cursor-northeast) (quote sawfish.wm.commands.move-cursor))
+(autoload-command (quote move-cursor-southwest) (quote sawfish.wm.commands.move-cursor))
+(autoload-command (quote move-cursor-southeast) (quote sawfish.wm.commands.move-cursor))
+(autoload-command (quote move-cursor-northwest-fine) (quote sawfish.wm.commands.move-cursor))
+(autoload-command (quote move-cursor-northeast-fine) (quote sawfish.wm.commands.move-cursor))
+(autoload-command (quote move-cursor-southwest-fine) (quote sawfish.wm.commands.move-cursor))
+(autoload-command (quote move-cursor-southeast-fine) (quote sawfish.wm.commands.move-cursor))
+(autoload-command (quote move-cursor-center) (quote sawfish.wm.commands.move-cursor))
 (autoload-command (quote move-window-interactively) (quote sawfish.wm.commands.move-resize))
 (autoload-command (quote resize-window-interactively) (quote sawfish.wm.commands.move-resize))
 (autoload-command (quote move-selected-window) (quote sawfish.wm.commands.move-resize))
