@@ -6,6 +6,25 @@ This lists the user-visible changes made to Sawfish, and which releases
 they occurred between. For more detailed information see the
 @file{ChangeLog} file in the Sawfish source tree.
 
+@heading 1.6.0
+
+@itemize @bullet
+
+@item The 1.6.0 release has new features and bugfixes
+
+@item New/Updated requirements:
+@itemize @minus
+
+@item rep-gtk 0.18.4 -> 0.90.0
+@end itemize
+
+@item New features:
+@itemize @minus
+
+@item 4 new move-cursor command for moving diagonally (move-cursor -northwest, -northeast, -southwest, -southeast) [Christopher Bratusek]
+@end itemize
+@end itemize
+
 @heading 1.5.0
 
 @itemize @bullet
