@@ -693,6 +693,10 @@ There are also more specialized cursor movement commands.
 @defunx move-cursor-right-fine
 @defunx move-cursor-up-fine
 @defunx move-cursor-down-fine
+@defunx move-cursor-northwest-fine
+@defunx move-cursor-northeast-fine
+@defunx move-cursor-southwest-fine
+@defunx move-cursor-southeast-fine
 Move the cursor 1 pixel in the indicated direction.
 @end defun
 
@@ -700,6 +704,10 @@ Move the cursor 1 pixel in the indicated direction.
 @defunx move-cursor-right
 @defunx move-cursor-up
 @defunx move-cursor-down
+@defunx move-cursor-northwest
+@defunx move-cursor-northeast
+@defunx move-cursor-southwest
+@defunx move-cursor-southeast
 Move the cursor @code{move-cursor-increment} pixels in the indicated
 direction.
 @end defun
