@@ -6,6 +6,14 @@
 	* lisp/sawfish/gtk/color-preview.jl: use GtkColorButton instead of
 	GtkPreview (for rep-gtk 0.90.0)
 
+	* lisp/sawfish/wm/commands/move-cursor.jl: added 4 new move-cursor
+	command for moving diagonally (move-cursor -northwest, -northeast,
+	southwest, southeast)
+
+	* man/sawfish.texi: updated doc for new move-cursor-commands
+
+	* man/news.texi: added 1.6.0 section, updated
+
 2009-07-02  Christopher Bratusek <zanghar@freenet.de>
 	* po/*
 	* configure.in: de-intltoolize sawfish ... is breaking current
